--- a/clients.properties
+++ b/clients.properties
@@ -2,3 +2,7 @@ spring.application.name=configclient
 spring.cloud.consul.port=8500
 spring.cloud.consul.host=localhost
 spring.cloud.consul.discovery.service-name=${spring.application.name}
+spring.rabbitmq.host=192.168.239.136
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
